--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "recharts": "^2.5.0",
     "three": "^0.151.3",
     "web-vitals": "^2.1.4",
     "zustand": "^4.3.7"
