--- a/package.json
+++ b/package.json
@@ -12,7 +12,14 @@
     "@types/three": "^0.150.1",
     "axios": "^1.3.5",
     "bootstrap": "^5.2.3",
+    "cloudinary": "^1.35.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "jwt-decode": "^3.1.2",
+    "mongoose": "^7.0.3",
+    "multer": "^1.4.5-lts.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
